2009-02-03  Badlop  <badlop@process-one.net>

	* doc/Makefile: When cleaning, remove contributed_modules.tex

	* src/Makefile.in: Fix arguments to Install program

2009-02-02  Badlop  <badlop@process-one.net>

	* src/web/ejabberd_web_admin.erl: Calls to the hook
	webadmin_menu_node provide the node as first argument, and calls
	to webadmin_menu_hostnode provide both the host and the node. Fix
	call to make_menu_items, because webadmin_menu_node was called in
	cases where webadmin_menu_hostnode should be called. Align to
	right some table elements.

2009-01-31  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Provide only an example of language option
	* doc/guide.html: Likewise

2009-01-30  Evgeniy Khramtsov <ekhramtsov@process-one.net>

	* src/eldap/eldap.erl: moves waiting for response queries to
	pending queue on an LDAP connection failure.

2009-01-27  Evgeniy Khramtsov <ekhramtsov@process-one.net>

	* src/eldap/eldap.erl: implemented queue for pending queries.

2009-01-27  Badlop  <badlop@process-one.net>

	* doc/guide.tex: mod_muc can run in several nodes of cluster
	* doc/guide.html: Likewise

2009-01-23  Evgeniy Khramtsov <ekhramtsov@process-one.net>

	* src/eldap/eldap.erl: Close a connection on tcp_error.

2009-01-23  Badlop  <badlop@process-one.net>

	* src/odbc/mysql.sql: Fix complain about comment syntax
	* src/odbc/pg.sql: Likewise

2009-01-21  Badlop  <badlop@process-one.net>

	* doc/api/process-one.css: Add some style to HTML elements

	* src/ejabberd_listener.erl: Fix EDoc errors
	* src/web/ejabberd_web_admin.erl: Likewise

	* src/ejabberd_hooks.erl: Explanation in EDoc of some functions

2009-01-20  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Explain that account creation is only supported
	by internal and odbc authentication methods
	* doc/guide.html: Likewise

	* src/Makefile.in: The path to the installed copy of ejabberd
	Guide is set in the environment variable
	EJABBERD_DOC_PATH (EJAB-837).